--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -319,6 +319,17 @@
   year={1998}
 }
 
+@article{jeong2009functional,
+  title={On the functional quality of service (FQoS) to discover and compose interoperable web services},
+  author={Jeong, Buhwan and Cho, Hyunbo and Lee, Choonghyun},
+  journal={Expert Systems with Applications},
+  volume={36},
+  number={3},
+  pages={5411--5418},
+  year={2009},
+  publisher={Elsevier}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
